<resources>
    <string name="app_name">IoT</string>
    <string name="txtReg">Registration</string>
    <string name="reg">Sign up</string>
    <string name="name">Name : </string>
    <string name="email">E-mail : </string>
    <string name="password">Password : </string>
    <string name="re_pass">Re-Password : </string>
    <string name="submit">Submit</string>
    <string name="txt_have_act">Already have an account?</string>
    <string name="login">Login</string>
    <string name="forget_pass">Forget password?</string>
    <string name="pager_text">There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain... </string>
    <string name="drawer_open">opened</string>
    <string name="drawer_close">closed</string>
    <string name="title_activity_light_settings">LightSettings</string>
    <string name="light">Light</string>
    <string name="timer">Timer</string>
    <string name="repeat">Repeat</string>
    <string name="mode">Mode</string>
    <string name="music">Music</string>
    <string name="mode_opt">Mode</string>
    <string name="title_activity_maps">Map</string>
 </resources>
