<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradint_bg"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/linear_action"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_back_arrow"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_back_arrow"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="6dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_below="@+id/linear_action"
        android:background="@color/gray"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
        android:layout_margin="15dp">

        <LinearLayout
            android:id="@+id/linearcontent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="E-mail"
                android:gravity="center"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:paddingLeft="4dp"
                android:textSize="18dp"
                android:padding="4dp"
                android:textColor="@color/black"
                android:background="@drawable/edt_bottom_line"
                android:fontFamily="sans-serif-light" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearpass"
            android:gravity="center"
            android:layout_margin="15dp"
             android:layout_below="@+id/linearcontent"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtpass"
                  android:hint="Password"
                android:singleLine="true"
                android:gravity="center"
                android:inputType="textPassword"
                 android:textSize="18dp"
                android:textColor="@color/black"
                android:background="@drawable/edt_bottom_line"
                android:padding="4dp"
                android:fontFamily="sans-serif-light" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearpass"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp">
            <Button
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/login"
                android:background="@drawable/button_bg"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/btnregister"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/edt_bg"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:text="@string/reg" />

        </LinearLayout>


    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_pass"
        android:textSize="14dp"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"

        />
</RelativeLayout>