<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:id="@+id/headre"
        android:visibility="visible">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_leftarrow"
            android:id="@+id/left_arrow"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/header"
            android:textSize="18dp"
            android:text="Settings"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/linearcontent1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
         android:layout_margin="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light"
             android:text="@string/light"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_alignParentLeft="true"
             android:textSize="16dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
             android:layout_gravity="center"
            android:layout_alignParentRight="true"
            android:gravity="center"
            >
            <Switch
                android:id="@+id/switch_btn"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                 />
        </LinearLayout>
        </RelativeLayout>
    <RelativeLayout
        android:id="@+id/linearcontent2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/mode_opt"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_alignParentLeft="true"
            android:textSize="16dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_alignParentRight="true"
            android:gravity="center"
             >
            <Spinner
                android:id="@+id/spinmode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:paddingLeft="8dp"
                android:popupBackground="@android:color/white"
                android:scrollbars="none"
                android:spinnerMode="dropdown" />
        </LinearLayout>
        </RelativeLayout>
    <RelativeLayout
        android:id="@+id/linearcontent3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/repeat"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:textSize="16dp"
            android:paddingTop="8dp"
            android:id="@+id/textView" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:id="@+id/rel_repeat"
            android:orientation="horizontal"
            android:layout_alignTop="@+id/textView"
            android:layout_alignParentEnd="true">
            <TextView
                android:id="@+id/txtrepeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="Once"
                android:layout_centerInParent="true"
                android:textSize="15dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_right_arrow"
                android:layout_alignParentRight="true"/>
        </LinearLayout>
        </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rel_picker"
        android:visibility="gone">
    <com.madrapps.pikolo.HSLColorPicker
        android:id="@+id/colorPicker"
         android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lightness_indicator_stroke_width="0dp"
        app:arc_length="110"
        app:hue_start_angle="30"
        app:lightness_start_angle="270"
        app:radius_offset="20dp"
        app:saturation_indicator_stroke_color="@color/colorPrimary"
        app:saturation_start_angle="150"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_centerInParent="true"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/img_color"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/linearcontent"
        android:background="@drawable/bg_circle"
        android:layout_centerInParent="true"
        />
    </RelativeLayout>
</LinearLayout>